--- a/client/styles/pages/proposals.scss
+++ b/client/styles/pages/proposals.scss
@@ -2,7 +2,7 @@
 
 .ProposalsPage {
     // TODO: duplicated
-    .sublayout-content {
+    .sublayout-body {
         flex-direction: column;
         .cui-list {
             overflow-y: visible;
